# disn

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  configuration.yaml.example  docker-compose.yml
chain/contract/: identity.json  revoked_cert.json
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20220126032323_create_vc_tplt_table.sql  20220126032356_create_user_vc_tplt_selection_table.sql  20220321061314_create_did_table.sql  20220324062827_create_vc_issuer_table.sql  20220324080629_update_vc_issuer_table.sql  20220328054849_update_vc_issuer.sql  20220331104853_create_passbase.sql  20220331122536_update_passbase.sql  20220331140023_update_vc_issuers.sql  20220401021226_update_passbase_add_is_adult.sql  20220401022052_update_passbase_add_vc_related.sql  20220401022453_update_passbase_notify.sql  20220411063358_create_tx_records.sql  20220419072420_add_did_encryptkey.sql
migrations/2021-09-07-184029_create_users/: up.sql
migrations/2022-01-18-135452_create_vc_tplts/: down.sql  up.sql
migrations/2022-01-19-062333_create_user_vc_tplt_selections/: down.sql  up.sql
scripts/: init_db.sh
src/: api.rs  configuration.rs  dto.rs  error.rs  extractors.rs  lib.rs  model.rs  response.rs  sql.rs
src/config/: env.rs
src/config/db/: mod.rs  postgres.rs
src/credentials/: adult_prove.rs  mod.rs  personal_identity.rs
src/handlers/: did.rs  mod.rs  passbase.rs  user.rs  vc.rs
src/service/: aws.rs  chain.rs  did.rs  mod.rs  passbase.rs  user.rs  vc.rs
src/utils/: envelope.rs  jwt.rs  mod.rs
tests/: Cargo.toml  did.rs  health_check.rs  helpers.rs  passbase.rs  vc.rs
