[package]
name = "disn"
version = "0.1.0"
authors = ["OTT Creative"]
edition = "2021"
license = "MIT"

[dependencies]
axum = { version = "0.4", features = ["headers"] }
bcrypt = "0.10"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "3.0.0-rc.4", features = ["derive", "env"] }
config = "0.11"
dotenv = "0.15"
futures = "0.3.19"
headers = "0.3"
hyper = "0.14.16"
jsonwebtoken = "7.2"
lazy_static = "1.4"
rayon = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.5.10", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "chrono",
    "uuid",
    "migrate",
    "offline",
] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.2", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
validator = { version = "0.14", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
didkit = { version = "0.3", path = "../didkit/lib", features = ["http-did"] }
didkit-cli = { version = "^0.1.1", path = "../didkit/cli" }
ssi = { version = "0.3", path = "../ssi", default-features = false }
did-method-key = { version = "0.1", path = "../ssi/did-key" }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }

[lib]
path = "src/lib.rs"

[[bin]]
name = "disn"
path = "src/bin/server.rs"
